# haskell_lab

./: README.md
Category Theory with Bartosz Milewski/: Introduction to Category Theory.md
Cryptography/: CustomTests.hs  XOR.hs  test.hs  xor.hs
Curses/: ChangeLog.md  Curses.cabal  README.md  package.yaml
Data-Structures/: ChangeLog.md  Data-Structures.cabal  LICENSE  package.yaml
GoHaskell/: .gitignore  CHANGELOG.md  GoHaskell.cabal  LICENSE  README.md
GoHaskell/src/: GoHaskell.hs
GoHaskell/src/Configs/: Config.hs  config.json
GoHaskell/src/Models/: #GameTrie.hs#  GameTrie.hs  Models.hs
GoHaskell/src/Test/: BoardTests.hs  GameTrieTests.hs
GoHaskell/src/Test/Utils/: DummyTests.hs  TestInfra.hs  TestUtils.hs
GoHaskell/src/UI/: UI.hs
GoHaskell/src/Utils/: Utils.hs
GoHaskell/tools/: cleanup.sh  run_go_haskell.sh  run_tests.sh
Hagenlocher/: Hagenlocher.md
Haskell in Depth/: Haskell in Depth.md  vocab2.hs
Learn You a Haskell/: 1. Introduction.md  2. Starting Out.md  3. Types and Typeclasses.md  4. Syntax in Functions.md  5. Recursion.md  Learn You a Haskell.md
Packt/: Expressions.hs  Fundamentals.md
Prof. Edil/: Hangman.hs  Haskell com Prof. Edil.md
Programming in Haskell/: 1.hs  1.md  10.hs  10.md  10_hangman.hs  10_life.hs  10_nim.hs  11.hs  12.hs  12.md  13.hs  13.md  14.md  15.md  15_eratos.hs  16.hs  2.hs  2.md  3.md  4.hs  4.md  5.hs  5.md  5_ex.hs  6.hs  6.md  7.hs  7.md  7_binary_string.hs  7_ex.hs  7_voting.hs  8.hs  8.md  8_abstract.hs  8_ex.hs  8_tautology.hs  9  9.hi  9.hs  9.md  (+2 more)
QuickCheck/: QuickCheck.hs  QuickCheck.md
(+64 files in other folders)
