Name:          GoHaskell
Version:       0.0.1
Cabal-Version: >= 1.10
Build-Type:    Simple
License:       GPL
Author:        Philippe Fanaro <philippefanaro@gmail.com>
Maintainer:    Philippe Fanaro <philippefanaro@gmail.com>
Bug-Reports:   https://github.com/FanaroEngineering/go_haskell/issues
Homepage:      https://github.com/FanaroEngineering/go_haskell
Category:      CLI
Synopsis:      Go in the terminal (CLI), with Haskell.
Description:
  Go in the terminal, with Haskell.

  This project (will) offers:

  - A CLI for working with SGF files.
  - An interactive way of playing Go in the terminal.

extra-source-files:
  README.md
  CHANGELOG.md

library
  Default-language: Haskell2010
  Hs-source-dirs:
    src
  Build-depends:
    base >= 4.3,
    ansi-terminal >= 0.11,
    aeson >= 1.5.6.0,
    bytestring >= 0.10,
    utf8-string
  Exposed-Modules:
    GoHaskell,
    UI.UI,
    Configs.Config,
    Models.GameTrie,
    Models.Models,
    Utils.Utils,

    Test.BoardTests,
    Test.GameTrieTests
